--- a/jobs-app/package.json
+++ b/jobs-app/package.json
@@ -18,6 +18,7 @@
     "express": "^4.20.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.1",
-    "mongoose": "^8.6.1"
+    "mongoose": "^8.6.1",
+    "xml2js": "^0.6.2"
   }
 }
