--- a/jobs-app/client/package.json
+++ b/jobs-app/client/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -24,24 +25,53 @@
     "axios": "^1.7.7",
     "formik": "^2.4.6",
     "jest": "^29.7.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
     "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "babel-jest": "^29.7.0",
+    "cross-env": "^7.0.3",
     "cypress": "^13.14.2",
     "eslint": "^9.9.0",
+    "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "vite": "^5.4.1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended",
+      "plugin:jest/recommended"
+    ],
+    "env": {
+      "browser": true,
+      "node": true,
+      "jest": true
+    },
+    "plugins": [
+      "jest"
+    ],
+    "globals": {
+      "test": "readonly",
+      "expect": "readonly",
+      "describe": "readonly",
+      "beforeEach": "readonly",
+      "afterEach": "readonly"
+    }
   }
 }
